syntax = "proto3";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

enum StatusCode {
  OK = 0;
  BAD_CONTENT = 1;
  CONFLICT = 2;
  WRONG_CREDENTIALS = 3;
  NOT_FOUND = 4;
  GENERIC_ERROR = 5;
}

message Status {
  StatusCode code = 1;
  string message = 2;
}

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  string password = 5;
  string role = 6;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
  Status status = 2;
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  User user = 1;
  Status status = 2;
}

message UpdateUserRequest {
  string userId = 1;
  User user = 2;
}

message UpdateUserResponse {
  User user = 1;
  Status status = 2;
}

message DeleteUserRequest {
  string userId = 1;
}

message DeleteUserResponse {
  string userId = 1;
  Status status = 2;
}
